--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.artelsv.sashaitschool"
+        applicationId "com.artelsv.Gat"
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
